# timemap

./: .gitignore  README.md  main.py  pyproject.toml  run.py  timemap.spec
.github/workflows/: build.yml
src/timemap/: config.py  db.py  main.py  output.py  tui.py
