[project]
name = "timemap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "textual>=6.10.0",
    "textual-plotext>=1.0.1",
    "toml>=0.10.2",
    "typer>=0.20.0",
]

[project.scripts]
timemap = "timemap.main:run"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
